<!-- 
Author: Victor Malchikov
FileName: game_display.xml 
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:text="@string/states"
    	android:textColor="@color/blue"
    	android:paddingTop="10dp"
    	android:paddingLeft="5dp"
    	android:textSize="@dimen/game_size"
    	/>
    
    <!-- ***************************STATES**************************** -->	
    <LinearLayout 
     	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal"
    	android:layout_gravity="left">
    	
    	
         <TextView 
             android:id="@+id/state_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_capital"
             />
         
      </LinearLayout>
    
     <LinearLayout 
     	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal"
    	android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/state_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_capital"
             />
         
      </LinearLayout>
      
       <LinearLayout 
     		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/state_three"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_three"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_capital"
             />
         
      </LinearLayout>
      
      <LinearLayout 
     		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/state_four"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_four"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_capital"
             />
         
      </LinearLayout>
      
      <LinearLayout 
     		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/state_five"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_five"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_capital"
             />
         
      </LinearLayout>
  
 	 <TextView
     	 android:layout_width="wrap_content"
    	 android:layout_height="wrap_content" 
    	 android:text="@string/capitals"
    	 android:textColor="@color/blue"
    	 android:paddingTop="10dp"
    	 android:textSize="@dimen/game_size"
    	 android:paddingLeft="5dp"
    	/>
 	 
 	<!-- ************************CAPITALS********************** -->	         	
    <LinearLayout 
     	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal"
    	android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/cap_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_six"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_state"
             />
         
      </LinearLayout>
    
     <LinearLayout 
     	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="horizontal"
    	android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/cap_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_seven"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_state"
             />
         
      </LinearLayout>
      
       <LinearLayout 
     		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/cap_three"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_eight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_state"
             />
         
      </LinearLayout>
      
      <LinearLayout 
     		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/cap_four"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_nine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_state"
             />
         
      </LinearLayout>
      
      <LinearLayout 
     		android:layout_width="wrap_content"
    		android:layout_height="wrap_content" 
    		android:orientation="horizontal"
    		android:layout_gravity="left">
    	
         <TextView 
             android:id="@+id/cap_five"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/game_size"
             android:paddingLeft="7dp"
             />
         
         <EditText 
             android:id="@+id/answer_ten"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:textSize="@dimen/game_size"
             android:hint="@string/hint_state"
             />
         
      </LinearLayout>
      
      <Button 
          android:id="@+id/game_score"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/score"
          android:layout_gravity="center"
          android:onClick="buttonHandler"
          />

</LinearLayout>